[gd_scene load_steps=3 format=3 uid="uid://cksx526iftj5d"]

[ext_resource type="Script" path="res://src/ui_parts/tag_editor.gd" id="1_7i0c4"]
[ext_resource type="FontFile" uid="uid://dtb4wkus51hxs" path="res://visual/fonts/FontMono.ttf" id="2_0lxvf"]

[node name="TagEditor" type="PanelContainer"]
offset_left = 1020.0
offset_right = 1024.0
offset_bottom = 30.0
script = ExtResource("1_7i0c4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 4

[node name="TitleButton" type="PanelContainer" parent="VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/MarginContainer/TitleButton"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="TitleButtonIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer/TitleButton/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(18, 18)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 2

[node name="TitleButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer/MarginContainer/TitleButton/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_0lxvf")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1

[node name="RightContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="AttributeContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/RightContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="UnknownAttributes" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/RightContainer/AttributeContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="PaintAttributes" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/RightContainer/AttributeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShapeAttributes" type="HFlowContainer" parent="VBoxContainer/HBoxContainer/RightContainer/AttributeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/MarginContainer/TitleButton" to="." method="_on_title_button_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/MarginContainer/TitleButton" to="." method="_on_title_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/MarginContainer/TitleButton" to="." method="_on_title_button_mouse_exited"]
